kubernetes-ingress/kubernetes-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-dashboard-deployment
  labels:
    app: kubernetes-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubernetes-dashboard
  template:
    metadata:
      labels:
        app: kubernetes-dashboard
    spec:
      containers:
      - name: kubernetes-dashboard
        image: kubernetesui/dashboard
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-service
spec:
  selector:
    app: kubernetes-dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
